# icp1_libraries

./: .gitignore  CMakeLists.txt
include/mymath/: mymath.h
src/: mymath.c
